Fix about snippet box sizing bug on small displays

--- a/css/style.css
+++ b/css/style.css
@@ -530,7 +530,7 @@ animation-delay:4s;
 .frclogo {
     /* position: relative; */
     margin: 0;
-    height: 100%;
+    height: 380px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -538,7 +538,7 @@ animation-delay:4s;
 }
 .mission-description-box {
     width: 100%;
-    height: 100%;
+    height: 380px;
     align-items: center;
     padding: 5%;
 }
@@ -1154,5 +1154,6 @@ b {
     }
     .aboutsnippet {
         grid-template-columns: repeat(1, 1fr);
+        height: 760px;
     }
 }
